--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1>Let's get started!</h1>
-    
+    <ul>
+        <li>
+            Product Title
+        </li>
+        <li>
+            Product Details
+        </li>
+        <li>
+            Product Image
+        </li>
+    </ul>
 </body>
 </html>
