--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Product List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Let's get started!</h1>
-    <ul>
-        <li>
-            Product Title
-        </li>
-        <li>
-            Product Details
-        </li>
-        <li>
-            Product Image
-        </li>
-    </ul>
+    <div class="product-list">
+    </div>
 </body>
+
+<script src="index.js"></script>
+
+
 </html>
