--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <div class="product-list">
-    </div>
-</body>
+
+<div class="search-container">
+    <input type="text" class="search-input" placeholder="Enter your search term">
+    <button class="search-button">Search</button>
+</div>
+<div class="grid-container" id="productList"></div>
 
 <script src="index.js"></script>
 
-
+</body>
 </html>
