--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 
-<div class="search-container">
-    <input type="text" class="search-input" placeholder="Enter your search term">
-    <button class="search-button">Search</button>
-</div>
+
+
+    <div class="topnav">
+        <input type="text" placeholder="Search..">
+      </div>
+
 <div class="grid-container" id="productList"></div>
 
 <script src="index.js"></script>
