--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>This page will contain details about specific product!</h1>
+
+    <div id="product-detail"></div>
+
+    <script src="detail.js"></script>
     
 </body>
 </html>
