--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product List</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
-
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
     <div class="topnav">
-        <input type="text" placeholder="Search..">
-      </div>
+      <input type="text" placeholder="Search.." />
+    </div>
 
-<div class="grid-container" id="productList"></div>
+    <div class="grid-container" id="productList"></div>
 
-<script src="index.js"></script>
-
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
