--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <title>Product List</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/search_bar.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="topnav">
+    <!-- <div class="topnav">
       <input type="text" placeholder="Search.." />
-    </div>
+    </div> -->
+
+    <div class="wrap">
+      <div class="search">
+         <input type="text" class="searchTerm" placeholder="What are you looking for?">
+         <button type="submit" class="searchButton">
+           <i class="fa fa-search"></i>
+        </button>
+      </div>
+   </div>
 
     <div class="grid-container" id="productList"></div>
 
     <script src="index.js"></script>
+    <script src="product_info.js"></script>
   </body>
 </html>
