--- a/product_info.html
+++ b/product_info.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
     <h1>This page will contain details about specific product!</h1>
 
-    <div id="product-detail"></div>
+    <div class = "grid-item" id="productInfoSet"></div>
 
-    <script src="detail.js"></script>
+    <script src="product_info.js"></script>
     
 </body>
 </html>
