--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <!-- <div class="topnav">
-      <input type="text" placeholder="Search.." />
-    </div> -->
 
     <div class="wrap">
       <div class="search">
-         <input type="text" class="searchTerm" placeholder="What are you looking for?">
+         <input type="text" class="searchTerm" id="search-input" placeholder="What are you looking for?">
          <button type="submit" class="searchButton">
            <i class="fa fa-search"></i>
         </button>
