--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     />
   </head>
   <body>
-    <div class="search-wrapper">
-      <label for="search">Search Elements</label>
-      <input type="search" id="search" data-search />
-    </div>
+    <div class="search-bar">
+      <input type="text" data-search placeholder="Search Products..." class="search-input">
+   </div>
 
     <label for="productCategories">Choose a category:</label>
     <select name="productCategories" id="categories">
