Filtering and fixing some bugs

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 
     <script src="index.js"></script>
     <script src="product_info.js"></script>
+    <!-- <script src="search.js"></script> -->
   </body>
 </html>
