--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="grid-container" id="productList"></div>
 
-    <div id="pagination"></div>
+    <div class="pagination" id="pagination"></div>
 
     <!-- adding js files -->
     <script src="index.js"></script>
