--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product List</title>
+    <title>Dummy Bazaar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/search_bar.css" />
@@ -18,6 +18,7 @@
         type="text"
         placeholder="Search Products..."
         class="search-input"
+        spellcheck="false"
       />
     </div>
 
@@ -25,6 +26,7 @@
     <select name="productCategories" id="categories"></select>
 
     <div class="grid-container" id="productList"></div>
+
 
     <div class="pagination" id="pagination"></div>
 
