--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Dummy Bazaar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/search_bar.css" />
     <link
-      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Inclusive+Sans&family=Pacifico&family=Rubik+Iso&family=Rubik+Moonrocks&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -26,7 +32,6 @@
     <select name="productCategories" id="categories"></select>
 
     <div class="grid-container" id="productList"></div>
-
 
     <div class="pagination" id="pagination"></div>
 
