--- a/product_info.html
+++ b/product_info.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class = "grid-item" id="productInfoSet"></div>
+    <div class = "product" id="productInfoSet"></div>
 
     <script src="product_info.js"></script>
     
