--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dummy Bazaar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon_bag.ico" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
@@ -37,7 +37,7 @@
     <div class="pagination" id="pagination"></div>
 
     <!-- adding js files -->
-    <script src="index.js"></script>
-    <script src="product_info.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/product_info.js"></script>
   </body>
 </html>
