--- a/product_info.html
+++ b/product_info.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Information</title>
-    <link rel="stylesheet" href="assets/css/detail.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/detail.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/favicon/favicon_cart.ico"
+    />
+  </head>
+  <body>
+    <div class="product" id="productInfoSet"></div>
 
-    <div class = "product" id="productInfoSet"></div>
-
-    <script src="product_info.js"></script>
-    
-</body>
+    <script src="js/product_info.js"></script>
+  </body>
 </html>
