--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dummy Bazaar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon_bag.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/favicon/favicon_bag.ico"
+    />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       rel="stylesheet"
